fixed a issue when opening on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ hr {
 .bottom-cloud {
   position: absolute;
   left: 300px;
-  top: 200px;
+  top: 300px;
 }
 
 .top-cloud {
